# SimonSays

./: .gitignore  CMakeLists.txt
src/: main.c
